Version 0.4

 * Fix strings encoding (Closes #6)
 * Allow to get a project commit (GitLab 6.1)
 * ProjectMergeRequest: fix Note() method
 * Gitlab 6.1 methods: diff, blob (commit), tree, blob (project)

Version 0.3

 * Use PRIVATE-TOKEN header for passing the auth token
 * provide a AUTHORS file
 * cli: support ssl_verify config option
 * Add ssl_verify option to Gitlab object. Defauls to True
 * Correct url for merge requests API.

Version 0.2

 * provide a pip requirements.txt
 * drop some debug statements

Version 0.1

 * Initial release